@@ -1,5 +1,9 @@
 2015-06-24  Julien Bect  <julien.bect@centralesupelec.fr>
 
+	stk_param_init.m: Removed unused variable.
+
+	* paramestim/stk_param_init.m: Removed unused variable.
+
 	stk_param_getdefaultbounds.m: Return [] for parameter classes
 
 	* paramestim/stk_param_getdefaultbounds.m: Return empty lower and
